--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
     "theme_color": "#ffffff",
     "icons": [
         {
-            "src": "payslip.png",
+            "src": "logo.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any maskable"
