--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "E-Payslip VDNI",
-    "short_name": "LPT",
+    "short_name": "E-Pay",
     "start_url": "/index.php",
     "background_color": "#ffffff",
     "description": "E-Payslip VDNI",
