--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
     "start_url": "/index.php",
     "background_color": "#ffffff",
     "description": "E-Payslip VDNI",
-    "display": "fullscreen",
+    "display": "standalone",
     "theme_color": "#ffffff",
     "icons": [
       {
